Add socketio interface

--- a/agentconfig.properties
+++ b/agentconfig.properties
@@ -1,26 +1,26 @@
-#Mon Aug 28 10:10:56 KST 2023
+#Wed Oct 04 12:28:06 KST 2023
 sequenceNumber=
 ipaddress=192.168.56.1
 preserveOD=false
-profileLastUpdated=Mon, 19 Jun 2023 09\:26\:41 GMT
+profileLastUpdated=Wed, 04 Oct 2023 03\:27\:41 GMT
 agentMode=
 port=8087
 profileName=SBS_AP_MEDIA_DEV
 startupParams=-Xms512M -Xmx1G
 hostname=DESKTOP-38A0K54
-apikey=RZhqzMM5I+8ToIitNgJMloGhuQmZKQGyTNF3+sHLeEV1tmNYDQGF7A\=\=
+apikey=tsXRnSTT/hzVu4V7WRtB9PN9BUHBRhN+9YMFKRDSgUNSweO7mbatFg\=\=
 profileId=a12d1fb3-64ac-4c78-8dd9-f69d21e6e030
 serialPorts=
 agentserviceURL=https\://api.ap.org/media/v
 agentID=7e668756-be37-44f3-a342-38a1626aec6f
 agentKapiVersion=
 serialPortEnabled=false
-nextPage=https\://api.ap.org/media/v/content/feed?qt\=DsRhPZHPRlF&seq\=180804228
+nextPage=https\://api.ap.org/media/v/content/feed?qt\=RkeKWPoE0SF&seq\=183748420
 placeHolder=
-agentServiceName=
-agentStartupParams=
-jarExecutionPath=E\:\\sbsint
 localHTTPServerDisabled=false
+jarExecutionPath=E\:\\sbsint
+agentStartupParams=
+agentServiceName=
 agentName=Unnamed Agent
 environment=production
 entitlements=45590,45454,45565,45600,45274,45587,45325
